@@ -3,8 +3,9 @@ farstream (0.1.1-1) UNRELEASED; urgency=low
   * Initial upload of farstream
   * Packaging changed from farsight2 to farstream
   * Sync from preliminary Ubuntu packaging (thanks to Ken VanDine)
+  * Update for multi-arch
 
- -- Sjoerd Simons <sjoerd@debian.org>  Wed, 07 Mar 2012 22:50:52 +0100
+ -- Sjoerd Simons <sjoerd@debian.org>  Thu, 08 Mar 2012 11:24:29 +0100
 
 farsight2 (0.0.31-1) unstable; urgency=low
 
